Fixing- whiteSpaces

--- a/css/responsive/421_responsive.css
+++ b/css/responsive/421_responsive.css
@@ -624,10 +624,10 @@
         background-color: white;
         z-index: 4;
         width: 82%;
-        height: 330px;
+        height: 350px;
         box-shadow: 0px 0px 36px -2px rgba(153,147,153,0.82);
         margin-left: 11%;
-        margin-top: 171%;
+        margin-top: 166%;
 
     }
     .contact_form
